2005-06-06  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/codegen.py, codegen/override.py: Add a 'body' override
	section type, which includes code after headers, imports, and type
	declarations.  Useful if you write code that depends on imported
	or declared types.

2005-05-30  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.defs (pixbuf_get_from_drawable): Add. We can't remove
	the old method.

	* gtk/gdk.override (_wrap_gdk_pixbuf_get_from_drawable2): 
	Rename it to ...2 and copy it to the override file since the code
	generator can't handle two functions with the same name

2005-05-31  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* pango.override (pypango_layout_line_get_type): Fix copy function.

2005-05-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* pango.override (_wrap_pango_layout_line_x_to_index) 
	(_wrap_pango_layout_line_index_to_x) 
	(_wrap_pango_layout_line_get_extents) 
	(_wrap_pango_layout_line_get_pixel_extents): Impl.

	* gtk/gdk.override: Ignore gdk_draw_layout_line and
	gdk_draw_layout_line_with_colors, at least for now.

	* pango-types.defs (LayoutLine): Declare LayoutLine as boxed type.

	* pango.defs: pango_layout_line_ref and unref should not be
	exposed as python API.

	* pango.override (PANGO_TYPE_LAYOUT_LINE): Register boxed type for
	PangoLayoutLine, unless it's already defined.

	* pango.defs: Add defs for
	pango_font_metrics_get_underline_thickness,
	pango_font_metrics_get_underline_position,
	pango_font_metrics_get_strikethrough_thickness, and
	pango_font_metrics_get_strikethrough_position.

	* gobject/pygobject.c (pygobjectmeta_init): Don't register types
	that are already registered (have a __gtype__ attribute).

2005-05-28  Manish Singh  <yosh@gimp.org>

	* gobject/pygiochannel.c (pyg_iowatch_marshal): Pass the GIOCondition
	to PyObject_CallFunction.

2005-05-28  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (initgobject):
	* gobject/pygobject-private.h: