@@ -1,5 +1,10 @@
 2005-06-06  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* codegen/codegen.py (Wrapper.write_getsets): Add support for
+	structured fields.  For example, a field 'bar' inside a structure
+	'foo' is declared in the defs as "foo.bar" and mapped as "foo_bar"
+	python attribute.
+	
 	* codegen/codegen.py, codegen/override.py: Add a 'body' override
 	section type, which includes code after headers, imports, and type
 	declarations.  Useful if you write code that depends on imported
